src/it-tools/it-tools.ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
spec:
  defaultBackend:
    service:
      name: it-tools
      port:
        number: 80
